--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
           <div class="content">
             <h3>One of us ?</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-              laboriosam ad deleniti.
+              Update Text Here
             </p>
             <button class="btn transparent" id="sign-in-btn">
               Sign in
