--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <div class="content">
             <h3>One of us ?</h3>
             <p>
-              Update Text Here
+                Already have it just in buddy
             </p>
             <button class="btn transparent" id="sign-in-btn">
               Sign in
